@@ -31,6 +31,7 @@
 	* Output/GNUstepOutput/Controllers/Preferences/GeneralPreferencesController.m
 	* Output/GNUstepOutput/Controllers/Preferences/PreferencesController.m
 	* Output/GNUstepOutput/Controllers/ContentControllers/StandardChannelController.m
+	* Output/GNUstepOutput/Controllers/ContentControllers/StandardContentController.m
 	Replace GS memory macros
 
 2015-02-14 Riccardo Mottola <rm@gnu.org>
